# todo-server

./: .env  .gitignore  Cargo.toml  docker-compose.yml
migrations/2022-07-18-070419_create_users/: up.sql
migrations/2022-07-18-073254_create_todo/: down.sql  up.sql
src/: errors.rs  main.rs  schema.rs  utils.rs
src/handlers/: mod.rs
src/handlers/v1/: auth.rs  mod.rs  todo.rs  user.rs
src/models/: todo.rs  user.rs
