[package]
name = "todo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8"
dotenv = "0.15.0"
derive_more = "0.99.0"
rust-argon2 = "1.0"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
actix-identity = "0.4"
futures = "0.3"
serde_json = "1.0"
time = "0.3"